--- a/frontend/regional-mma2/src/App.css
+++ b/frontend/regional-mma2/src/App.css
@@ -1,18 +1,29 @@
 .App {
   text-align: center;
-  display:grid;
-  grid-template-columns: 2fr 2fr;
-  
 }
 
-.Content{
+.Visual_UI{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 1fr;
+}
+.Fighter_Content{
   margin: 0 auto;
   text-align: center;
   max-width:960px;
-
 }
 
-.Prospects_Section{
-  padding:0;
-  margin:0;
+.Map_Wrapper{
+  margin:1em;
 }
+
+.Preview_Section{
+  margin:1em;
+}
+
+.Preview_Content{
+  width:100%;
+  height:100%;
+  background-color:tomato;
+}
+
