--- a/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospects.css
+++ b/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospects.css
@@ -5,12 +5,18 @@
 
 .Prospects__Content{
     display:grid;
-    grid-template-columns: 1fr 1fr;
-
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows:repeat(5,1fr);
+    justify-items: start;
+    grid-gap:1em;
+    margin:1em;
 }
 
 .Prospect__Wrapper{
-    border:1px solid black;
+    padding:1em;
+    border-radius:5px;
+    background-color:#F2F2F2;
+    box-shadow:0px 2px 4px rgba(0,0,0,.3);
 }
 
 .Prospect--Image{
