--- a/frontend/regional-mma2/src/App.css
+++ b/frontend/regional-mma2/src/App.css
@@ -8,9 +8,12 @@
   grid-auto-rows: 1fr;
 }
 .Fighter_Content{
-  margin: 0 auto;
+
   text-align: center;
   max-width:960px;
+  background-color:#DAE0E6;
+  border-bottom-right-radius: 5px;
+  padding:1em;
 }
 
 .Map_Wrapper{
