--- a/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospects.css
+++ b/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospects.css
@@ -1,25 +1,16 @@
 .Prospects__Wrapper{
     margin:0 auto;
     text-align:center;
+    
 }
 
 .Prospects__Content{
     display:grid;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows:repeat(5,1fr);
+    grid-template-rows:1fr 1fr auto;
     justify-items: start;
     grid-gap:1em;
     margin:1em;
 }
 
-.Prospect__Wrapper{
-    padding:1em;
-    border-radius:5px;
-    background-color:#F2F2F2;
-    box-shadow:0px 2px 4px rgba(0,0,0,.3);
-}
 
-.Prospect--Image{
-    width:116px;
-    height:auto;
-}
