--- a/frontend/regional-mma2/src/App.css
+++ b/frontend/regional-mma2/src/App.css
@@ -30,3 +30,10 @@
   background-color:tomato;
 }
 
+@media (max-width:400px){
+  .Visual_UI{
+    display:grid;
+    grid-template-columns: 1fr ;
+    grid-auto-rows: 1fr;
+  }
+}
