trying out dynamic spacing

--- a/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospects.css
+++ b/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospects.css
@@ -1,16 +1,21 @@
 .Prospects__Wrapper{
     margin:0 auto;
     text-align:center;
-    
+    margin:calc(5px + 2vmin);
 }
 
 .Prospects__Content{
     display:grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows:1fr 1fr auto;
+    /* grid-template-columns: repeat(4,1fr); */
+    /* grid-gap:1em; */
+    /* grid-template-rows:1fr 1fr auto; */
     justify-items: start;
-    grid-gap:1em;
-    margin:1em;
+
+    margin:calc(2px + 2vmin);
+    justify-items: center;
+
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 
