--- a/frontend/regional-mma2/src/Components/FighterList/FighterList.css
+++ b/frontend/regional-mma2/src/Components/FighterList/FighterList.css
@@ -1,7 +1,11 @@
 .Fighter_Content{
     text-align: center;
-    max-width:960px;
     background-color:#DAE0E6;
     border-bottom-right-radius: 5px;
-    padding:1em;
+    /* padding:1em; */
+    padding: calc(10px + 3vmin);
+  }
+
+  .Fighter--Title{
+    padding: calc(3px + 2vmin);
   }
