--- a/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospect/Prospect.css
+++ b/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospect/Prospect.css
@@ -1,9 +1,11 @@
 .Prospect__Wrapper{
     padding:1em;
+    /* padding: calc(1px + 3vmin); */
     border-radius:5px;
     background-color:#F2F2F2;
     box-shadow:0px 2px 4px rgba(0,0,0,.3);
     transition:all .2s ease-in-out;
+    margin-bottom: calc(1px + 3vmin);
 }
 
 
@@ -21,12 +23,25 @@
 .Prospect--Image{
     width:116px;
     height:auto;
-   
+    margin-bottom: calc(1px + 1vmin);
 }
 
-.Prospect--Rank{
-    font-size:1.2rem;
-}
+
+@media (min-width: 320px) and (max-width: 959px) {
+    .Prospect--Rank{
+      font-size: calc( 1.2rem + 16 * (100vw - 320px) / (960 - 320) );
+      /* For a negative slope, we have to invert the breakpoints */
+      line-height: calc( 120% + 3.2 * (100vw - 960px) / (320 - 960) );
+    }
+  }
+  
+  @media (min-width: 1024px) and (max-width: 1600px) {
+    .Prospect--Rank {
+      font-size: calc( .5rem + 16 * (100vw - 1024px) / (1600 - 1024) );
+      /* For a negative slope, we have to invert the breakpoints */
+      line-height: calc( 120% + 2.2 * (100vw - 1600px) / (1024 - 1600) );
+    }
+  }
 
 .Prospect__Wrapper:hover{
     transform:scale(1.1);
