--- a/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospect/Prospect.css
+++ b/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospect/Prospect.css
@@ -1,35 +1,55 @@
-.Prospect__Wrapper{
-    padding:1em;
-    /* padding: calc(1px + 3vmin); */
-    border-radius:5px;
-    background-color:#F2F2F2;
-    box-shadow:0px 2px 4px rgba(0,0,0,.3);
-    transition:all .2s ease-in-out;
-    margin-bottom: calc(1px + 3vmin);
+/*Monitors*/
+@media (min-width:800px){
+    .Prospect__Wrapper{
+        padding:1em;
+        border-radius:5px;
+        background-color:#F2F2F2;
+        box-shadow:0px 2px 4px rgba(0,0,0,.3);
+        transition:all .2s ease-in-out;
+        margin-bottom: calc(1px + 3vmin);
+    }
+    
+    
+    .Prospect--Link{
+        text-decoration: none;
+        color: #c1320b;
+        border-bottom: 1px dotted #000;
+    }
+    
+    .Prospect--Link:hover{
+        color:#334;
+        border-bottom:1px solid #000;
+    }
+    
+    .Prospect--Image{
+        width:116px;
+        height:auto;
+        margin-bottom: calc(1px + 1vmin);
+    }
+}
+/*iphone-X*/
+@media (max-width:400px){
+    .Prospect__Wrapper{
+        /* padding:1em; */
+        padding:calc(10px + 3vmin);
+        border-radius:5px;
+        background-color:#F2F2F2;
+        box-shadow:0px 2px 4px rgba(0,0,0,.3);
+        transition:all .2s ease-in-out;
+        margin-bottom: calc(15px + 3vmin);
+    }
+    .Prospect--Image{
+        width:250px;
+        height:auto;
+        margin-bottom: calc(1px + 1vmin);
+    }
 }
 
-
-.Prospect--Link{
-    text-decoration: none;
-    color: #c1320b;
-    border-bottom: 1px dotted #000;
-}
-
-.Prospect--Link:hover{
-    color:#334;
-    border-bottom:1px solid #000;
-}
-
-.Prospect--Image{
-    width:116px;
-    height:auto;
-    margin-bottom: calc(1px + 1vmin);
-}
 
 
 @media (min-width: 320px) and (max-width: 959px) {
     .Prospect--Rank{
-      font-size: calc( 1.2rem + 16 * (100vw - 320px) / (960 - 320) );
+      font-size: calc( 3.2rem + 16 * (100vw - 320px) / (960 - 320) );
       /* For a negative slope, we have to invert the breakpoints */
       line-height: calc( 120% + 3.2 * (100vw - 960px) / (320 - 960) );
     }
