--- a/frontend/regional-mma2/src/App.css
+++ b/frontend/regional-mma2/src/App.css
@@ -13,6 +13,11 @@
     /* padding: calc(2px + 1vmin);     */
     margin: calc(2px + 5vmin);     
   }
+
+  .FighterList_Wrapper{
+    box-shadow:0px 3px 12px rgba(0,0,0,.3);
+    border-radius:20px;
+  }
   
 }
 
@@ -26,6 +31,11 @@
     display:grid;
     grid-template-columns: 1fr ;
     margin: calc(2px + 5vmin);    
+  }
+
+  .FighterList_Wrapper{
+    box-shadow:0px 3px 12px rgba(0,0,0,.3);
+    border-radius:20px;
   }
 }
 
