--- a/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospect/Prospect.css
+++ b/frontend/regional-mma2/src/Components/FighterList/Prospects/Prospect/Prospect.css
@@ -3,13 +3,9 @@
     .Prospect__Wrapper{
         padding:1em;
         border-radius:5px;
-        background-color:#F2F2F2;
-        box-shadow:0px 2px 4px rgba(0,0,0,.3);
         transition:all .2s ease-in-out;
         margin-bottom: calc(1px + 2vmin);
-
     }
-    
     
     .Prospect--Link{
         text-decoration: none;
@@ -26,21 +22,17 @@
         width:116px;
         height:auto;
         margin-bottom: calc(1px + 1vmin);
+        border-radius:5px;
     }
 
-    .Prospect__Wrapper:hover{
-        transform:scale(1.1);
-        box-shadow:0px 4px 16px rgba(0,0,0,.1);
-    }
+
 }
+
 /*iphone-X*/
 @media (max-width:400px){
     .Prospect__Wrapper{
-        /* padding:1em; */
         padding:calc(10px + 3vmin);
         border-radius:5px;
-        background-color:#F2F2F2;
-        box-shadow:0px 2px 4px rgba(0,0,0,.3);
         transition:all .2s ease-in-out;
         margin-bottom: calc(15px + 3vmin);
     }
@@ -48,6 +40,7 @@
         width:200px;
         height:auto;
         margin-bottom: calc(1px + 5vmin);
+        border-radius:5px;
     }
 }
 
